--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "breakingcode",
+  "name": "breakingcode-plus",
   "version": "0.0.1",
   "description": "javascript version of code breaker",
   "main": "src/index",
@@ -11,18 +11,29 @@
     "game",
     "coffee-script"
   ],
-  "directories": { "test": "test/" },
+  "directories": {
+    "test": "test/"
+  },
+  "browserify": {
+    "transform": ["coffeeify"]
+    },
+
   "author": "hitoshi.k",
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^6.1.0",
     "coffee-script": "^1.8.0",
+    "coffeeify": "^0.7.0",
     "espower-loader": "^0.9.1",
     "gulp": "^3.8.8",
     "gulp-coffeelint": "^0.4.0",
     "gulp-istanbul": "^0.3.1",
+    "gulp-jade": "^0.9.0",
     "gulp-mocha": "^1.1.1",
+    "gulp-webserver": "^0.8.3",
     "intelli-espower-loader": "^0.4.0",
     "mocha": "^1.21.5",
-    "power-assert": "^0.9.1"
+    "power-assert": "^0.9.1",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
